--- a/TelaLogin.html
+++ b/TelaLogin.html
@@ -7,7 +7,8 @@
 
     <style>
         body{
-            background-color: antiquewhite;
+            background-color: rgb(247, 243, 238);
+            
         }
 
         h1{
@@ -15,8 +16,6 @@
             font-style: italic;
             font-size: 40px;
             color: blue;
-
-
         }
 
         a{
