--- a/VendasProdutos.html
+++ b/VendasProdutos.html
@@ -28,11 +28,16 @@
 
         li{
             display: inline;
-            margin-right: 190PX;    
+            margin-right: 200PX;    
          }
 
          a{
             text-decoration: none;
+            text-align: center;
+         }
+
+         ul{
+            text-align: center;
          }
 
         
